--- a/PhanMenBanMayTinh/PhanMenBanMayTinh.csproj
+++ b/PhanMenBanMayTinh/PhanMenBanMayTinh.csproj
@@ -101,6 +101,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Faccount.resx">
+      <DependentUpon>Faccount.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Flogin.resx">
       <DependentUpon>Flogin.cs</DependentUpon>
     </EmbeddedResource>
