--- a/PhanMenBanMayTinh/PhanMenBanMayTinh.csproj
+++ b/PhanMenBanMayTinh/PhanMenBanMayTinh.csproj
@@ -96,6 +96,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataProvide.cs" />
     <Compile Include="Faccount.cs">
       <SubType>Form</SubType>
     </Compile>
