code for BTN_DEL on Faccount

--- a/PhanMenBanMayTinh/PhanMemBanMayTinh.csproj
+++ b/PhanMenBanMayTinh/PhanMemBanMayTinh.csproj
@@ -100,6 +100,7 @@
     <Compile Include="BackEnd\FormCenterDAO.cs" />
     <Compile Include="BackEnd\From Account DA0\AddAccountDAO.cs" />
     <Compile Include="BackEnd\From Account DA0\ChangePassDAO.cs" />
+    <Compile Include="BackEnd\From Account DA0\FaccountDAO.cs" />
     <Compile Include="BackEnd\LoginDAO.cs" />
     <Compile Include="FrontEnd\From Account\Add_Account.cs">
       <SubType>Form</SubType>
