--- a/PhanMenBanMayTinh/App.config
+++ b/PhanMenBanMayTinh/App.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="PhanMenBanMayTinh.Properties.Settings.QLMTConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\QLMT.mdf;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient" />
+        <add name="PhanMenBanMayTinh.Properties.Settings.QLMTConnectionString" connectionString="Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\QLMT.mdf;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
