--- a/PhanMenBanMayTinh/PhanMemBanMayTinh.csproj
+++ b/PhanMenBanMayTinh/PhanMemBanMayTinh.csproj
@@ -97,11 +97,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BackEnd\Form AccountDAO\AddAccountDAO.cs" />
+    <Compile Include="BackEnd\Form AccountDAO\ChangePassDAO.cs" />
+    <Compile Include="BackEnd\Form AccountDAO\FaccountDAO.cs" />
+    <Compile Include="BackEnd\Form ProductsDAO\AddProductsDAO.cs" />
     <Compile Include="BackEnd\FormCenterDAO.cs" />
-    <Compile Include="BackEnd\From Account DA0\AddAccountDAO.cs" />
-    <Compile Include="BackEnd\From Account DA0\ChangePassDAO.cs" />
-    <Compile Include="BackEnd\From Account DA0\FaccountDAO.cs" />
     <Compile Include="BackEnd\LoginDAO.cs" />
+    <Compile Include="FrontEnd\Form Products\AddProducts.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrontEnd\Form Products\AddProducts.Designer.cs">
+      <DependentUpon>AddProducts.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrontEnd\From Account\Add_Account.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -141,6 +148,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FrontEnd\Form Products\AddProducts.resx">
+      <DependentUpon>AddProducts.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrontEnd\From Account\Add_Account.resx">
       <DependentUpon>Add_Account.cs</DependentUpon>
     </EmbeddedResource>
@@ -208,5 +218,6 @@
     </Content>
     <None Include="Resources\icon].jpg" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
